tests/ui/error-codes/E0799.rs
fn test() -> impl Sized + use<main> {}
//~^ ERROR E0799

fn main() {}
